--- a/pubsub/index.html
+++ b/pubsub/index.html
@@ -5,11 +5,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Pubsub in the browser</title>
-	<link rel="icon" href="favicon.ico" />
-	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" crossorigin />
+	<link rel="icon" href="./favicon.ico" />
+<!-- 
+<link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" crossorigin />
 	<link rel="stylesheet" href="https://unpkg.com/ipfs-css@0.12.0/ipfs.css" crossorigin />
-
-	<script src="https://unpkg.com/ipfs-http-client@56.0.2/index.min.js" crossorigin="anonymous">
+ -->
+	<link rel="stylesheet" href="./tachyons.min.css" crossorigin />
+	<link rel="stylesheet" href="./ipfs.css" crossorigin />
+<!-- 
+<script src="https://unpkg.com/ipfs-http-client@56.0.2/index.min.js" crossorigin="anonymous">
+	</script>
+ -->
+	<script src="./ipfs-http-client.js" crossorigin="anonymous">
 	</script>
 <!-- 
 	<script src="https://cdn.jsdelivr.net/npm/ipfs-core-utils/cjs/src/index.min.js">
@@ -17,14 +24,18 @@
 	<script type="module" src="https://cdn.jsdelivr.net/npm/multiformats/src/index.js">
 	</script>
  -->
+<!-- 
 	<script type="module" src="https://cdn.jsdelivr.net/npm/uint8arrays/index.min.js">
+	</script>
+ -->
+	<script type="module" src="./uint8arrays.js">
 	</script>
 	<script type="module" src="./src/index.js" defer>
 	</script>
 </head>
 <body class="sans-serif">
 <header class="pv3 ph2 ph3-l bg-navy cf mb4">
-	<a href="https://ipfs.io/" title="ipfs.io"> <img src="https://ipfs.io/images/ipfs-logo.svg" class="v-mid" style="height: 50px" /> </a> 
+	<a href="https://ipfs.io/" title="ipfs.io"> <img src="./ipfs-logo.svg" class="v-mid" style="height: 50px" /> </a> 
 	<h1 class="aqua fw2 montserrat dib ma0 pv2 ph1 v-mid fr f3 lh-copy">
 		Pubsub 
 	</h1>
