--- a/pub/index.html
+++ b/pub/index.html
@@ -8,8 +8,8 @@
     <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <title>IPFS in the Browser</title>
-    <script preload src="/assets/pub/ipfs.js"></script>
-    <link preload rel="stylesheet" type="text/css" href="/assets/pub/style.css">
+    <script preload src="assets/pub/ipfs.js"></script>
+    <link preload rel="stylesheet" type="text/css" href="assets/pub/style.css">
     <script type="text/javascript">
     function vp() {
         const rootElement = document.querySelector("html");
@@ -84,6 +84,6 @@
   <input type="text" id="cid" class="cid"><br>
   <button id="add" class="add btn">Add</button>
   <button id="cat" class="cat btn">Cat</button>
-  <script src="/assets/pub/main.js"></script>
+  <script src="assets/pub/main.js"></script>
 </body>
 </html>
