--- a/exchange/index.html
+++ b/exchange/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IPFS - Exchange Files</title>
-    <link rel="stylesheet" href="assets/exchange/index.e06a2f85.css">
-    <link rel="icon" href="assets/exchange/favicon.e7ae9020.ico">
-    <!-- <script src="assets/exchange/index.07f4a58e.js" defer></script> -->
-    <script src="assets/exchange/index.d56a3cb1.js" defer></script>
+    <link rel="stylesheet" href="./exchange/index.e06a2f85.css">
+    <link rel="icon" href="./exchange/favicon.e7ae9020.ico">
+    <!-- <script src="./exchange/index.07f4a58e.js" defer></script> -->
+    <script src="./exchange/index.d56a3cb1.js" defer></script>
 </head>
 <body ondragover="event.preventDefault()">
 <header>
-    <img width="200" src="assets/exchange/ipfs-logo.41a79285.svg" alt="IPFS">
+    <img width="200" src="./exchange/ipfs-logo.41a79285.svg" alt="IPFS">
 </header>
 <main>
     <div class="box node">
@@ -71,7 +71,7 @@
                 <button id="fetch-btn" type="button" disabled>Fetch</button>
             </div>
             <div id="drag-container">
-                <img width="100" src="assets/exchange/upload.565a270d.svg" alt="Upload">
+                <img width="100" src="./exchange/upload.565a270d.svg" alt="Upload">
                 <p>
                     <b>Drag &amp; drop</b> a file to upload it.
                 </p>
