--- a/pubsub/index.html
+++ b/pubsub/index.html
@@ -30,7 +30,7 @@
  -->
 	<script type="module" src="./uint8arrays.js">
 	</script>
-	<script type="module" src="./src/index.js" defer>
+	<script type="module" src="./main.js" defer>
 	</script>
 </head>
 <body class="sans-serif">
