--- a/monaco-editor/index.html
+++ b/monaco-editor/index.html
@@ -1,63 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width"/>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://*.crotel.workers.dev https://monacoeditor.pages.dev https://v2.jit.sn http: https: data:;">
+  <title>Monaco Editor Playground</title>
+  <!--    <link rel="preload" href="./style.css" as="style">-->
+  <link rel="stylesheet" href="style.css">
 
-    <title>Monaco Editor Playground</title>
-    <!--    <link rel="preload" href="./style.css" as="style">-->
-    <link rel="stylesheet" href="./style.css">
-
-
-    <link data-name="vs/editor/editor.main" rel="stylesheet"
-          href="node_modules/monaco-editor/min/vs/editor/editor.main.css"/>
+  <link data-name="vs/editor/editor.main" rel="stylesheet" href="node_modules/monaco-editor/min/vs/editor/editor.main.css"/>
 </head>
 <body class="playground-page">
-<pre data-preload="playground/new-samples/creating-the-editor/hello-world/sample.js" style="display:none">// The Monaco Editor can be easily created, given an
-// empty container and an options literal.
-// Two members of the literal are "value" and "language".
-// The editor takes the full size of its container.
+  <pre data-preload="playground/new-samples/creating-the-editor/hello-world/sample.js" style="display:none">// The Monaco Editor can be easily created, given an
+    // empty container and an options literal.
+    // Two members of the literal are "value" and "language".
+    // The editor takes the full size of its container.
 
-</pre>
-<pre data-preload="playground/new-samples/creating-the-editor/hello-world/sample.css" style="display:none"></pre>
-<pre data-preload="playground/new-samples/creating-the-editor/hello-world/sample.html" style="display:none">&lt;div id="container" style="height: 100%"&gt;&lt;/div&gt;
-</pre>
-<div id="loading">
+  </pre>
+  <pre data-preload="playground/new-samples/creating-the-editor/hello-world/sample.css" style="display:none"></pre>
+  <pre data-preload="playground/new-samples/creating-the-editor/hello-world/sample.html" style="display:none">&lt;div id="container" style="height: 100%"&gt;&lt;/div&gt;
+  </pre>
+  <div id="loading">
     <div class="spinner">
-        <div class="rect1"></div>
-        <div class="rect2"></div>
-        <div class="rect3"></div>
-        <div class="rect4"></div>
-        <div class="rect5"></div>
+      <div class="rect1"></div>
+      <div class="rect2"></div>
+      <div class="rect3"></div>
+      <div class="rect4"></div>
+      <div class="rect5"></div>
     </div>
-</div>
+  </div>
 
-<section id="playground"></section>
+  <section id="playground"></section>
 
-<footer class="container">
+  <footer class="container">
     <hr/>
     <p class="text-center">
-        <small>&copy; 2022 Microsoft.</small><br>
-        <small>Viewport crotel.</small>
+      <small>&copy; 2022 Microsoft.</small><br>
+      <small>Viewport crotel.</small>
     </p>
-</footer>
-<!--jquery 1.9.1 -> 3.5.1-->
-<script src="./lib/jquery.min.js"></script>
-<!--bootstrap 2.3.0-->
-<script src="./lib/bootstrap.min.js"></script>
-<script>
-  var require = {paths : {vs : "node_modules/monaco-editor/min/vs"}};
-</script>
-<script src="node_modules/monaco-editor/min/vs/loader.js"></script>
-<script src="node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-<script src="node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
+  </footer>
+  <!--jquery 1.9.1 -> 3.5.1-->
+  <script src="lib/jquery.min.js"></script>
+  <!--bootstrap 2.3.0-->
+  <script src="lib/bootstrap.min.js"></script>
+  <script>
+    var require = {paths : {vs : "node_modules/monaco-editor/min/vs"}};
+  </script>
+  <script src="node_modules/monaco-editor/min/vs/loader.js"></script>
+  <script src="node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
+  <script src="node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
 
-<script>
-  (function() {
-  var PLAY_SAMPLES = [
-    {
-      chapter : "Creating the editor" ,
-      name : "Console Proxy" ,
+  <script>
+    (function() {
+      var PLAY_SAMPLES = [
+      {
+        chapter : "Creating the editor" ,
+        name : "Console Proxy" ,
       id : "console-log-proxy" ,//id : "creating-the-editor-hello-world" ,
       path : "creating-the-editor/console-log-proxy" ,
     } ,
@@ -229,13 +227,13 @@
       id : "extending-language-services-configure-json-defaults" ,
       path : "extending-language-services/configure-json-defaults" ,
     } ,
-  ];
+    ];
 
-  if (typeof exports !== "undefined") {
-    exports.PLAY_SAMPLES = PLAY_SAMPLES;
-  } else {
-    self.PLAY_SAMPLES = PLAY_SAMPLES;
-  }
+if (typeof exports !== "undefined") {
+  exports.PLAY_SAMPLES = PLAY_SAMPLES;
+} else {
+  self.PLAY_SAMPLES = PLAY_SAMPLES;
+}
 })();
 </script>
 <script>/// <reference path="../../release/monaco.d.ts" />
@@ -248,21 +246,21 @@
     require( [ "vs/editor/editor.main" ] , function() {
       xhr( "playground/monaco.d.ts.txt" ).then( function( response ) {
         monaco.languages.typescript.javascriptDefaults.addExtraLib(
-            response.responseText ,
-            "ts:monaco.d.ts" ,
-        );
+          response.responseText ,
+          "ts:monaco.d.ts" ,
+          );
         monaco.languages.typescript.javascriptDefaults.addExtraLib(
-            [
-              "declare var require: {" ,
-              "	toUrl(path: string): string;" ,
-              "	(moduleName: string): any;" ,
-              "	(dependencies: string[], callback: (...args: any[]) => any, errorback?: (err: any) => void): any;" ,
-              "	config(data: any): any;" ,
-              "	onError: Function;" ,
-              "};" ,
+          [
+            "declare var require: {" ,
+            "	toUrl(path: string): string;" ,
+            "	(moduleName: string): any;" ,
+            "	(dependencies: string[], callback: (...args: any[]) => any, errorback?: (err: any) => void): any;" ,
+            "	config(data: any): any;" ,
+            "	onError: Function;" ,
+            "};" ,
             ].join( "\n" ) ,
-            "ts:require.d.ts" ,
-        );
+          "ts:require.d.ts" ,
+          );
       } );
 
       var loading = document.getElementById( "loading" );
@@ -346,9 +344,9 @@
 
       if (editor) {
         editor.layout( {
-                         width : HALF_WIDTH - 2 ,
-                         height : REMAINING_HEIGHT - TABS_HEIGHT - 1 ,
-                       } );
+         width : HALF_WIDTH - 2 ,
+         height : REMAINING_HEIGHT - TABS_HEIGHT - 1 ,
+       } );
       }
 
       runContainer.style.position = "absolute";
@@ -503,22 +501,22 @@
         return response.responseText;
       } );
       Promise.all( [ js , css , html ] ).then(
-          function( _ ) {
-            var js = _[0];
-            var css = _[1];
-            var html = _[2];
-            LOADED_SAMPLES.push( {
-                                   id : sampleId ,
-                                   js : js ,
-                                   css : css ,
-                                   html : html ,
-                                 } );
-            return callback( null , findLoadedSample( sampleId ) );
-          } ,
-          function( err ) {
-            callback( err , null );
-          } ,
-      );
+        function( _ ) {
+          var js = _[0];
+          var css = _[1];
+          var html = _[2];
+          LOADED_SAMPLES.push( {
+           id : sampleId ,
+           js : js ,
+           css : css ,
+           html : html ,
+         } );
+          return callback( null , findLoadedSample( sampleId ) );
+        } ,
+        function( err ) {
+          callback( err , null );
+        } ,
+        );
     }
 
     sampleSwitcher.onchange = function() {
@@ -604,7 +602,7 @@
   }
 
   var runIframe = null ,
-      runIframeHeight = 0;
+  runIframeHeight = 0;
 
   function doRun( runContainer ) {
     if (runIframe) {
@@ -647,39 +645,39 @@
   function xhr( url ) {
     if (preloaded[url]) {
       return Promise.resolve( {
-                                responseText : preloaded[url] ,
-                              } );
+        responseText : preloaded[url] ,
+      } );
     }
 
     var req = null;
     return new Promise(
-        function( c , e ) {
-          req = new XMLHttpRequest();
-          req.onreadystatechange = function() {
-            if (req._canceled) {
-              return;
+      function( c , e ) {
+        req = new XMLHttpRequest();
+        req.onreadystatechange = function() {
+          if (req._canceled) {
+            return;
+          }
+
+          if (req.readyState === 4) {
+            if ((req.status >= 200 && req.status < 300) || req.status === 1223) {
+              c( req );
+            } else {
+              e( req );
             }
+            req.onreadystatechange = function() {};
+          }
+        };
 
-            if (req.readyState === 4) {
-              if ((req.status >= 200 && req.status < 300) || req.status === 1223) {
-                c( req );
-              } else {
-                e( req );
-              }
-              req.onreadystatechange = function() {};
-            }
-          };
+        req.open( "GET" , url , true );
+        req.responseType = "";
 
-          req.open( "GET" , url , true );
-          req.responseType = "";
-
-          req.send( null );
-        } ,
-        function() {
-          req._canceled = true;
-          req.abort();
-        } ,
-    );
+        req.send( null );
+      } ,
+      function() {
+        req._canceled = true;
+        req.abort();
+      } ,
+      );
   }
 })();
 </script>
